[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"

solana-client = "1.18"
solana-sdk = "1.18"

tokio-tungstenite = "0.21"
futures-util = "0.3"

rust_decimal = "1.35"
rust_decimal_macros = "1.35"